--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
       "type": "cppdbg",
       "request": "launch",
       "program": "${workspaceRoot}\\main.run",
-      "args": [],
+      "args": ["[]"],
       "stopAtEntry": false,
       "cwd": "${workspaceRoot}",
       "environment": [],
